test_data/pos/ss/652618/Windows/652618.ss3.rtf
#DeepConCNF_SS3: three-class secondary structure prediction results 
#probabilities are in the order of H E C, the 3 secondary structure types used in DSSP 
   1 M C   0.000 0.001 0.999 
   2 T C   0.008 0.274 0.718 
   3 I E   0.028 0.647 0.325 
   4 Y E   0.038 0.554 0.407 
   5 L H   0.730 0.103 0.166 
   6 S H   0.873 0.019 0.107 
   7 N H   0.923 0.007 0.070 
   8 A H   0.917 0.004 0.079 
   9 I H   0.808 0.004 0.188 
  10 E H   0.529 0.002 0.469 
  11 N C   0.128 0.002 0.870 
  12 A C   0.008 0.003 0.990 
  13 T C   0.005 0.001 0.994 
  14 S C   0.014 0.002 0.984 
  15 I H   0.980 0.000 0.020 
  16 E H   0.991 0.000 0.009 
  17 Q H   0.994 0.000 0.006 
  18 V H   0.997 0.000 0.003 
  19 V H   0.995 0.000 0.005 
  20 E H   0.995 0.000 0.005 
  21 L H   0.989 0.001 0.010 
  22 I H   0.965 0.001 0.034 
  23 N H   0.873 0.002 0.124 
  24 E H   0.520 0.003 0.477 
  25 G C   0.080 0.003 0.917 
  26 T C   0.057 0.004 0.939 
  27 C C   0.061 0.006 0.933 
  28 E C   0.073 0.013 0.914 
  29 G C   0.074 0.019 0.907 
  30 M C   0.083 0.032 0.885 
  31 E C   0.066 0.010 0.924 
  32 G C   0.044 0.020 0.936 
  33 I C   0.056 0.323 0.621 
  34 E E   0.071 0.467 0.462 
  35 F C   0.081 0.407 0.512 
  36 T C   0.100 0.093 0.807 
  37 A H   0.961 0.001 0.038 
  38 D H   0.984 0.000 0.015 
  39 I H   0.988 0.000 0.012 
  40 L H   0.993 0.000 0.006 
  41 A H   0.993 0.000 0.007 
  42 G H   0.991 0.000 0.008 
  43 Q H   0.992 0.000 0.008 
  44 Y H   0.993 0.000 0.007 
  45 A H   0.994 0.000 0.006 
  46 W H   0.994 0.000 0.006 
  47 S H   0.992 0.000 0.008 
  48 A H   0.979 0.000 0.021 
  49 A H   0.942 0.000 0.058 
  50 K H   0.921 0.000 0.079 
  51 D H   0.888 0.000 0.112 
  52 F H   0.890 0.001 0.109 
  53 V H   0.875 0.003 0.122 
  54 D H   0.835 0.002 0.163 
  55 S H   0.684 0.001 0.314 
  56 A C   0.216 0.001 0.783 
  57 G C   0.010 0.000 0.990 
  58 M C   0.003 0.002 0.995 
  59 T C   0.008 0.001 0.990 
  60 A H   0.965 0.000 0.035 
  61 D H   0.973 0.000 0.027 
  62 D H   0.980 0.000 0.020 
  63 L H   0.991 0.000 0.008 
  64 E H   0.995 0.000 0.004 
  65 A H   0.994 0.000 0.006 
  66 Q H   0.990 0.000 0.010 
  67 L H   0.993 0.000 0.007 
  68 E H   0.992 0.000 0.008 
  69 F H   0.996 0.000 0.004 
  70 L H   0.990 0.000 0.010 
  71 S H   0.988 0.000 0.012 
  72 A H   0.938 0.001 0.061 
  73 A C   0.110 0.000 0.890 
  74 G C   0.007 0.000 0.993 
  75 A C   0.002 0.008 0.989 
  76 V C   0.012 0.182 0.805 
  77 F C   0.013 0.237 0.750 
  78 S C   0.010 0.041 0.949 
  79 E H   0.938 0.001 0.061 
  80 S H   0.973 0.001 0.026 
  81 V H   0.982 0.001 0.017 
  82 A H   0.990 0.001 0.009 
  83 V H   0.988 0.001 0.011 
  84 D H   0.975 0.001 0.024 
  85 H H   0.925 0.000 0.074 
  86 G H   0.901 0.001 0.097 
  87 L H   0.868 0.001 0.130 
  88 K H   0.829 0.002 0.168 
  89 L H   0.806 0.003 0.191 
  90 A H   0.715 0.004 0.280 
  91 A H   0.604 0.005 0.391 
  92 A C   0.402 0.005 0.593 
  93 D C   0.157 0.004 0.839 
  94 T C   0.045 0.002 0.954 
  95 E C   0.001 0.000 0.999 
