test_data/neg/ss/655292/Windows/655292.acc.rtf
#DeepConCNF_SAS: three-state solvent accessibility prediction results 
#probabilities are in the order of B (Bury, pACC: 0-10), M (Medium, pACC: 11-40) and E (Exposed, pACC: 41-100), 
#where pACC is the relative solvent accessibility value calculated by DSSP 
   1 M E   0.002 0.036 0.962 
   2 R E   0.013 0.158 0.828 
   3 R E   0.016 0.176 0.808 
   4 Q E   0.021 0.252 0.727 
   5 R E   0.071 0.434 0.495 
   6 R M   0.067 0.501 0.432 
   7 S E   0.083 0.377 0.540 
   8 I B   0.460 0.326 0.214 
   9 T B   0.518 0.409 0.073 
  10 D M   0.058 0.519 0.423 
  11 I M   0.195 0.505 0.301 
  12 I B   0.693 0.214 0.093 
  13 C B   0.498 0.381 0.121 
  14 E E   0.006 0.129 0.865 
  15 N E   0.032 0.292 0.676 
  16 C M   0.391 0.463 0.146 
  17 K E   0.026 0.264 0.710 
  18 Y M   0.358 0.451 0.191 
  19 L E   0.052 0.440 0.507 
  20 P E   0.174 0.349 0.477 
  21 T E   0.042 0.302 0.656 
  22 K E   0.007 0.092 0.902 
  23 R E   0.034 0.202 0.764 
  24 S E   0.055 0.192 0.753 
  25 R E   0.015 0.131 0.854 
  26 N E   0.010 0.092 0.898 
  27 K E   0.016 0.138 0.846 
  28 R E   0.016 0.096 0.888 
  29 K E   0.018 0.162 0.820 
  30 P E   0.045 0.158 0.797 
  31 I E   0.070 0.238 0.692 
  32 P E   0.171 0.307 0.522 
  33 K E   0.005 0.074 0.921 
  34 E E   0.015 0.109 0.876 
  35 S E   0.035 0.288 0.677 
  36 D E   0.009 0.128 0.863 
  37 V M   0.308 0.431 0.261 
  38 K E   0.005 0.101 0.894 
  39 T E   0.066 0.280 0.654 
  40 F M   0.166 0.420 0.414 
  41 N E   0.033 0.222 0.745 
  42 Y M   0.147 0.449 0.404 
  43 T E   0.187 0.301 0.511 
  44 A E   0.242 0.288 0.470 
  45 H E   0.088 0.368 0.544 
  46 L E   0.253 0.347 0.400 
  47 W M   0.263 0.415 0.322 
  48 D E   0.133 0.375 0.492 
  49 I E   0.177 0.400 0.423 
  50 R M   0.110 0.539 0.351 
  51 W B   0.430 0.335 0.236 
  52 L E   0.215 0.360 0.425 
  53 R E   0.085 0.430 0.486 
  54 H M   0.190 0.462 0.349 
  55 R M   0.072 0.570 0.358 
  56 A E   0.114 0.256 0.630 
  57 R E   0.013 0.190 0.797 
  58 N E   0.010 0.148 0.842 
  59 T E   0.008 0.118 0.874 
  60 R E   0.004 0.059 0.937 
